# bil-cs2-parser

./: .gitignore  Dockerfile  Makefile  README.md  example.env  main.py  pyproject.toml  test_main.py
.github/workflows/: ci.yaml
